keys as env vars